--- a/ContractManagementSystem/ContractManagementSystem.csproj
+++ b/ContractManagementSystem/ContractManagementSystem.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Forms\Form_AddWork.Designer.cs">
       <DependentUpon>Form_AddWork.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Form_AssignWork.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Form_AssignWork.Designer.cs">
+      <DependentUpon>Form_AssignWork.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Form_Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form_AddWork.resx">
       <DependentUpon>Form_AddWork.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Form_AssignWork.resx">
+      <DependentUpon>Form_AssignWork.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form_Dashboard.resx">
       <DependentUpon>Form_Dashboard.cs</DependentUpon>
